konst/tests/misc_tests/destructure_ui_tests/from_ref_tupled_struct_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/destructure_ui_tests/from_ref_tupled_struct_err.rs:4:5
  |
4 |     konst::destructure!{Tuple(foo, bar, baz) = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `Tuple`, found `&Tuple`
  |     arguments to this function are incorrect
  |
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn assert_same_type<T>(this: T, that: T) {
  |              ^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructuring__type_assert` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/destructure_ui_tests/from_ref_tupled_struct_err.rs:9:5
  |
9 |     konst::destructure!{Tuple(foo, bar, baz): &Tuple = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `Tuple`, found `&Tuple`
  |     arguments to this function are incorrect
  |
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn assert_same_type<T>(this: T, that: T) {
  |              ^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructuring__type_assert` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/destructure_ui_tests/from_ref_tupled_struct_err.rs:14:5
   |
14 |     konst::destructure!{Tuple<>, (foo, bar, baz): &Tuple = foo}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `Tuple`, found `&Tuple`
   |     expected due to this
   |
   = note: this error originates in the macro `$crate::__destructuring__type_assert` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
